<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/VertHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:id="@+id/Intro"
            android:layout_width="match_parent"
            android:layout_height="72dp" >

            <TextView
                android:id="@+id/freeFallInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/labelFieldPair2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp" >

            <TextView
                android:id="@+id/inputKm"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/inputKm" />

            <EditText
                android:id="@+id/freeFallInputView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/labelFieldPair1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/equivFreeFall"
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:text="@string/equivFreeFall" />

            <EditText
                android:id="@+id/freeFallOutPut"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="0.30"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/goToReverse" />

        <Button
            android:id="@+id/goToExtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToExtraDetails" />

        <TextView
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/details" />

    </LinearLayout>

</RelativeLayout>