<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExtraActivity" >

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/UserNameLab"
        android:layout_alignTop="@+id/UserNameLab"
        android:layout_toRightOf="@+id/UserNameLab"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/UserNameLab"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignLeft="@+id/goToMain"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/goToMain"
        android:layout_marginTop="17dp"
        android:text="@string/userName" />

    <Button
        android:id="@+id/goToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/UserNameLab"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="21dp"
        android:text="@string/goBack" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameField"
        android:layout_alignTop="@+id/goToMain"
        android:src="@drawable/crash" android:contentDescription="@string/saftyInfo"/>

</RelativeLayout>