<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReverseActivity" >

    <Button
        android:id="@+id/goBackFromExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labelFieldPair2"
        android:layout_alignParentBottom="true"
        android:text="@string/goBack" />

    <LinearLayout
        android:id="@+id/labelFieldPair2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp" >

        <TextView
            android:id="@+id/freeFallInput"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:text="@string/equivFreeFall" />

        <EditText
            android:id="@+id/freeFallInputView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number|numberDecimal" >

            <requestFocus />

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kmhOutLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/labelFieldPair2"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/kmhOutPutLab"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:text="@string/kmhOutput" />

        <EditText
            android:id="@+id/kmhOutPutView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberSigned" />

    </LinearLayout>

</RelativeLayout>